<resources>
    <string name="app_name">Food Recipe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorite</string>
    <string name="food_joke">Joke</string>
    <string name="no_internet_connection">No Internte Connection</string>
    <string name="image">image</string>
    <string name="fab">fab</string>

    // Bottom Sheet
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>


    <string name="search">Search</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="no_favorite_recipes">No Favorite Recipes.</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="share">Share</string>
    <string name="recipe_image">recipe_image</string>
    <string name="okey">Okey</string>
    <string name="title">Title</string>
    <string name="textview">TextView</string>
    <string name="_100">100</string>
    <string name="original">Original</string>
    <string name="consistency">Consistency</string>
    <string name="grams">Grams</string>
    <string name="name">Name</string>
    <string name="error">Error</string>


</resources>