<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.recipe.RecipesBottomSheet">


    <TextView
        android:id="@+id/mealtype_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/meal_type"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalView_mealType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealtype_TextView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/mealType_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/main_course_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/main_course_chip"
                    android:text="@string/main_course"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/side_dish_chip"
                    android:text="@string/side_dish"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/dessert_chip"
                    android:text="@string/dessert"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/appetizer_chip"
                    android:text="@string/appetizer"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/salad_chip"
                    android:text="@string/salad"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/bread_chip"
                    android:text="@string/bread"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/breakfast_chip"
                    android:text="@string/breakfast"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/soup_chip"
                    android:text="@string/soup"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/beverage_chip"
                    android:text="@string/beverage"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/sauce_chip"
                    android:text="@string/sauce"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/drink_chip"
                    android:text="@string/drink"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/snack_chip"
                    android:text="@string/snack"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/dietType_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/diet_type"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalView_mealType" />

    <HorizontalScrollView
        android:id="@+id/horizontalView_dietType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dietType_TextView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/dietType_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/gluten_free_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/gluten_free_chip"
                    android:text="@string/gluten_free"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ketogenic_chip"
                    android:text="@string/ketogenic"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/vegetarian_chip"
                    android:text="@string/vegetarian"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/vegan_chip"
                    android:text="@string/vegan"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/pescetarian_chip"
                    android:text="@string/pescetarian"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/paleo_chip"
                    android:text="@string/paleo"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/primal_chip"
                    android:text="@string/primal"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/whole30_chip"
                    android:text="@string/whole30"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/apply_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/apply"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalView_dietType" />
</androidx.constraintlayout.widget.ConstraintLayout>